--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -62,7 +62,14 @@ section.
 
 === Quick Look at DukeCooks
 
-(Include UI Screenshots + explain the components)
+Welcome to DukeCooks! The only planner you ever need for a healthier lifestyle! +
+When you first start up DukeCooks, you will be greeted with the Dashboard. To switch between the awesome features the DukeCooks
+has to offer, click on the icons found in the side panel or use the command box to go to another wonderful feature. +
+Below is a screenshot of DukeCooks' overview (Figure 1.3) and the accompanied features labeled on the left.
+
+.An Overview of DukeCooks
+[caption="Figure 1.3: "]
+image::DukeCooksOverview.png[width="790"]
 
 
 === Understanding DukeCooks
@@ -70,7 +77,8 @@ section.
 DukeCooks consists of 5 main features.
 You may click on the following features below to find out more about the feature and their available commands.
 
-* Dashboard - (Fill in a simple line for your feature?)
+* Dashboard: +
+Start making a task list for the things you plan to do and never have to forget to do something ever again!
 * Recipe Book - (Fill in a simple line for your feature?)
 * Exercise - (Fill in a simple line for your feature?)
 * Health - (Fill in a simple line for your feature?)
@@ -89,7 +97,10 @@ image::Ui.png[width="790"]
 
 == Commands
 === General
-Before we begin, let's look at some common commands that will be used through Duke cooks.
+Before we begin, let's look at some common commands that will be used through DukeCooks.
+
+==== Goto commands: `goto`
+Be the most efficient person in the room! Use the `goto` command to bring you to the awesome features that make up DukeCooks.
 
 ==== Add commands: `add`
 Have you just created a new dish, or tried a new exercise?
@@ -114,15 +125,26 @@ Delete commands will be used to delete a specific entry within DukeCooks.
 ==== Clear commands: `clear`
 Clear commands will be used to clear all saved data.
 
-=== Dashboard
+=== Breaking down the Dashboard
+For first time users of the CLI, working with it can be a daunting task. So, let's first start off by understanding what makes up the Dashboard!
 
-Can't track all your deadlines? Look through the available commands in this section and start managing them.
+In the image below (Figure 1), accompanied with text on the right, provides a brief explanation of the key components found in the Dashboard.
+
+.DukeCooks's Dashboard
+[caption="Figure 3.2: "]
+image::overviewdashboard.png[width="900"]
+
+[NOTE]
+====
+Here in the Dashboard, the prefix: /tn for name and td/ for date, are used to indicate the fields you are entering.
+====
+Alright, now you are ready to use DukeCooks! The following are the instructions on all the commands available in the Dashboard.
 
 ==== pass:[<u>Going to the Dashboard</u>]
 
 A quick way to get to the Dashboard and start getting work done!
 
-Command: `dashboard`
+Command: `goto dashboard`
 
 ==== pass:[<u>Adding a task</u>]
 
@@ -136,11 +158,27 @@ Format: `add task tn/_insert task here_ td/ _insert date here_`
 When entering the date for a task, please follow the given format: day/month/year
 ====
 
-Example usage: `add task tn/Bake a Cake td/29/10/2019`
+Example usage (Figure 3.3.2a & 3.3.3b): `add task tn/Bake CupCakes td/11/11/2019`
+
+Step 1. Enter the task you want to add into the command box and hit enter.
 
 .Adding a task
-[caption="Figure 2: "]
-image::addtask-ug.png[width="790"]
+[caption="Figure 3.2.2a: "]
+image::addtask1.png[width="500"]
+
+Step 2. If you have correctly inputted the information for adding a task, DukeCooks will
+tell you that the task is successfully added in the message box. +
+Step 3. You can view the newly added task under the Dashboard.
+
+.Adding a task success
+[caption="Figure 3.2.2b: "]
+image::addtask2.png[width="500"]
+
+[icon tip]
+====
+Did you know? You are able to enter Dashboard commands even if you are on another feature. Talk about
+double the productivity!
+====
 
 ==== pass:[<u>Editing a task's details</u>]
 
@@ -148,13 +186,29 @@ Made some typos when adding a task? +
 Fret not! You are able to make changes to them.
 
 Command: `edit task` +
-Format: `edit task _index number_`
+Format: `edit task _index number_ tn/ _insert new name_ td/ _insert new date_`
 
-Example usage: `edit task 1 tn/Bake cupcakes td/30/10/2019`
+[NOTE]
+====
+When editing a task, you can choose to change just 1 field or edit both fields.
+====
+
+Example usage (Figure 3.2.3a & 3.2.2b): `edit task 1 tn/Bake cupcakes td/21/10/2019`
+
+Step 1. Look at the index number corresponding to the task you want to edit. +
+Step 2. Enter the task information you want to edit into the command box and hit enter.
 
 .Editing a task
-[caption="Figure 3: "]
-image::edittask-ug.png[width="790"]
+[caption="Figure 3.2.3a: "]
+image::edittask1.png[width="500"]
+
+Step 3. If you have correctly inputted the information for editing a task, DukeCooks will
+tell you that the task is successfully edited in the message box. +
+Step 4. You can view the newly edited task under the Dashboard.
+
+.Editing a task success
+[caption="Figure 3.2.3b: "]
+image::edittask2.png[width="500"]
 
 ==== pass:[<u>Removing a task</u>]
 
@@ -164,11 +218,26 @@ Well you can delete them off from DukeCooks.
 Command: `delete task` +
 Format: `delete task _index number_`
 
-Example usage: `delete task 1`
+[NOTE]
+====
+Tasks that are marked as "RECENTLY COMPLETED" or "COMPLETED", cannot be deleted.
+====
+
+Example usage (Figure 3.2.4a & 3.2.4b): `delete task 1`
+
+Step 1. Look at the index number corresponding to the task you want to delete. +
+Step 2. Enter the task index number you want to delete into the command box and hit enter.
 
 .Deleting a task
-[caption="Figure 4: "]
-image::deletetask-ug.png[width="790"]
+[caption="Figure 3.2.4a: "]
+image::deletetask1.png[width="500"]
+
+Step 3. If you have correctly inputted the information for deleting a task, DukeCooks will
+tell you that the task is successfully removed from DukeCooks in the message box. +
+
+.Deleting a task success
+[caption="Figure 3.2.4b: "]
+image::deletetask2.png[width="500"]
 
 ==== pass:[<u>Marking a task as complete</u>]
 
@@ -178,28 +247,28 @@ Check it off the list!
 Command: `done` +
 Format: `done _index number_`
 
-Example usage: `done 2`
+Example usage (Figure 3.2.5a & 3.2.5b): `done 1`
 
-- 1: Enter the done command into the dashboard
-- 2: The task is now marked as RECENTLY COMPLETED.
-- 3: The progress bar will be increased
+Step 1. Look at the index number corresponding to the task you want to mark as complete. +
+Step 2. Enter the task index number you want to mark as complete into the command box and hit enter.
 
 .Marking a task complete
-[caption="Figure 5: "]
-image::donetask-ug.png[width="790"]
+[caption="Figure 3.2.5a: "]
+image::donetask1.png[width="500"]
 
-Hard at work? Marking 5 new tasks done will give a surprise! +
-A pop up window with an encouraging message will be displayed for extra motivation.
+Step 3. If you have correctly inputted the information for marking a task as complete, DukeCooks will
+tell you that the task is successfully marked in the message box. +
+Step 4. You can view the newly marked task under the Dashboard.
 
-.Completing 5 new tasks
-[caption="Figure 6: "]
-image::done5tasks-ug.png[width="300"]
+.Marking a task complete success
+[caption="Figure 3.2.5b: "]
+image::donetask2.png[width="500"]
 
 [NOTE]
 ====
-A task index number is available at the left side of the task's name.
+Hard at work? Marking 5 new tasks done will give a surprise! +
+A pop up window with an encouraging message will be displayed for extra motivation.
 ====
-
 ==== pass:[<u>Finding tasks</u>]
 
 For those who want to know what are the tasks relevant given a keyword.
@@ -207,20 +276,65 @@ For those who want to know what are the tasks relevant given a keyword.
 Command: `find task` +
 Format: `find task _keyword_`
 
-Example usage: `find task go`
+Example usage (Figure 3.2.6a & 3.2.6b): `find task project`
+
+Step 1. Enter the a keyword for that tasks you to find into the command box and hit enter.
 
 .Finding tasks with a keyword
-[caption="Figure 7: "]
-image::findtask-ug.png[width="790"]
+[caption="Figure 3.2.6a: "]
+image::findtask1.png[width="500"]
 
-==== pass:[<u>Viewing complete/incomplete tasks</u>]
+Step 3. If you have correctly inputted the information for finding a task, DukeCooks will
+tell you that the number of tasks relating to the keyword found in the message box. +
+Step 4. You can view the task relating to the keyword under the Dashboard.
+
+.Finding tasks with a keyword success
+[caption="Figure 3.2.6b: "]
+image::findtask2.png[width="500"]
+
+==== pass:[<u>Viewing completed/incompleted tasks</u>]
 
 Look at all those tasks!
+
 To view completed tasks: +
 Command: `list taskcomplete`
 
-For incomplete tasks: +
+For incompleted tasks: +
 Command: `list taskincomplete`
+
+==== pass:[<u>Postponing a task's date</u>] `Coming in v2.0`
+
+Think you need a little bit more time to complete a task?
+
+Command: `postpone task` +
+Format: `postpone task _index number_ by _number of days_`
+
+Example usage: `postpone task 1 by 5` +
+The above example will postpone the date of task 1 by 5 days.
+
+==== pass:[<u>Viewing your progress</u>] `Coming in v2.0`
+
+Want to know how many tasks you have done over the week? +
+DukeCooks will show you how many tasks you did each day for the past week. +
+Look at your progress and perhaps learn something about yourself!
+
+Command: `progress task`
+
+
+==== pass:[<u>Motivation booster</u>] `Coming in v2.0`
+
+DukeCooks knows you are hard at work. But for the times where you need an extra push, DukeCooks
+is here for you! +
+DukeCooks has a specially curated gif list that is sure to put a smile on your face!
+
+Command: `humour me`
+
+==== pass:[<u>Changing to calendar view</u>] `Coming in v2.0`
+
+A picture paints a thousand words. Same can be said with a calendar. Change to calendar view
+for a clearer view of all tasks due on a certain date!
+
+Command: `calendar`
 
 === Recipe Book
 
@@ -815,14 +929,16 @@ e.g. `delete recipe Chicken Rice`
 * *View recipe* : `view recipe` +
 e.g. `view recipe Chicken Rice`
 
-*Dashboard (Analytics & Suggestions)*
+*Dashboard*
 
-* *Get suggestions* : `suggest`
-* *Get random food suggestions* : `suggest food`
-* *Get new food suggestions* : `suggest new food`
-* *Get statistics* : `stats`
-* *Get food statistics* : `stats food`
-* *Get exercise statistics* : `stats exercise`
+* *Going to the Dashboard:* `goto dashboard`
+* *Adding a task:* `add task`
+* *Editing a task* : `edit task`
+* *Removing a task* : `delete task`
+* *Marking a task as complete* : `done task`
+* *Finding a task* : `find task`
+* *Viewing completed tasks* : `list taskcomplete`
+* *Viewing incomplete tasks* : `list taskcomplete`
 
 *Health Records*
 
