--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -433,6 +433,7 @@ image::ScheduleCommandExecution.png[]
 
 // end::scheduleactivity[]
 
+// tag:::autoschedule[]
 === Auto Schedule feature
 ==== Rationale
 There are times when users are planning for an overseas trip, there are so many activities in their activity list that they want to do but the problems faced are that they are unable to finish all the activities in the list or they are unable to find an optimal schedule plan.
@@ -503,6 +504,8 @@ If there other days to schedule, the steps taken will also be the same as Step 4
 * **Alternative:** Fix a break of 30min between every activity to acount for travel time
 ** Pros: Activities that user prioritised are more likely to be scheduled as we do not have to consider overlap of the start time of next activity.
 ** Cons: Certain activity may require more travelling time. If we fix a longer travelling time, it might not be optimising the schedule plan as certain activity might have shorter travelling time.
+
+// end::autoschedule[]
 
 === Logging
 
